SERVER-84005: [streams] reset exceeded memory limit signal after all SPs have been stopped

GitOrigin-RevId: 911da70cb4c428d66a3a3d49f11b7784ef9c1c33